# ortholyse

./: .gitignore  CLAUDE.md  CONTRIBUTING.fr.md  CONTRIBUTING.md  README.fr.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  update_copyright.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-spike-clan/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  SPIKE-REPORT.md
.planning/phases/01-spike-clan/artifacts/: BUILD-MOR-WINDOWS.md  CLAN-Windows-LICENSE.txt  LICENSE-VERDICT.md  MOR-CLI-TRIAL.md  SPIKE-02-mor-output-sample.cha
.planning/phases/01-spike-clan/artifacts/mor-build-shims/: sgtty.h
.planning/phases/01-spike-clan/artifacts/mor-build-shims/sys/: ioctl.h
app/: config.py
app/Views/: Transcription.py
app/Views/base/: base_enregistrement.py
app/Widgets/: AudioPlayer.py  Feuille.py
app/controllers/: Record_controllers.py  Result_controllers.py  Result_worker.py  Settings_controller.py  Transcription_worker.py
app/models/: Analyse_NLTK.py  audio_worker.py  clan_wrapper.py  exportation.py  memo.py  operation_fichier.py  transcription.py
tests/: conftest.py  test_analyse_nltk.py  test_clan_spike.py  test_controllers.py  test_feuille.py  test_pdf_export.py
tests/fixtures/: mtln_sample.cha  sample_fra.cha
