[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ortholyse"
version = "0.1.0"
description = "Desktop app for speech-language pathologists: local Whisper transcription and syntactic metrics on the corrected transcript."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Anis Hammouche" }]
keywords = ["speech-therapy", "transcription", "whisper", "nlp", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "PySide6>=6.8",
    "pydub>=0.25",
    "openai-whisper>=20240930",
    "torch>=2.6",
    "torchaudio>=2.6",
    "spacy>=3.8",
    "nltk>=3.9.4",
    "num2words>=0.5.14",
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "fpdf2>=2.8",
    "python-docx>=1.1",
    "pdfplumber>=0.11",
    "python-magic>=0.4",
    "biopython>=1.85",
    "PyAudio>=0.2.14",
    "sounddevice>=0.5",
    "TextGrid>=1.6",
    "Unidecode>=1.3",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
]

[project.urls]
Homepage = "https://github.com/assinscreedFC/ortholyse"
Repository = "https://github.com/assinscreedFC/ortholyse"
Issues = "https://github.com/assinscreedFC/ortholyse/issues"

# The "app/" tree is not yet a proper Python package (no __init__.py files,
# Qt entry point ships separately). We expose metadata only for now so that
# `pip install -e .` succeeds and resolves the runtime dependencies above.
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=app --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
pythonpath = ["."]
norecursedirs = ["app/models/test", "build", "dist", ".git"]
markers = [
    "unit: tests unitaires sans dépendance externe (CI-safe)",
    "integration: tests d'intégration nécessitant des binaires/ressources externes",
]

[tool.coverage.run]
source = ["app"]
omit = [
    # PySide6 widgets and views require a display server (D-07)
    "app/Widgets/*",
    "app/Views/*",
    # Qt controllers couple tightly to widgets/signals
    "app/controllers/*",
    "app/main.py",
    # pyaudio/sounddevice wrappers need real audio hardware
    "app/models/memo.py",
    "app/models/audio_worker.py",
    # whisper transcription pipeline needs the model + GPU
    "app/models/transcription.py",
    # legacy in-tree test directory (pre-Phase-9 test stub)
    "app/models/test/*",
    "app/models/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
